2008-02-09       Gaius Mulley <gaius@gnu.org>

        * gm2/Makefile.in:  replaced references of gm2/pg? to
	  gm2/pg?$(exeext) to enable building in a cygwin
	  environment as reported by David Moreno
	  <jose_david_moreno@yahoo.es>.

2008-02-08       Gaius Mulley <gaius@gnu.org>

        * gm2/gm2-libs/StringConvert.mod:  fixed CARDINAL
	  overflow bug.

2008-02-07       Gaius Mulley <gaius@gnu.org>

	* fixed REAL/LONGREAL bugs as reported by:
	  Ivan F. Villanueva B and Steve Giess.
	* gm2/gm2-compiler/M2Base.def:  ZRealType added and
	  exported.
	* gm2/gm2-compiler/M2Base.mod:  ZRealType implemented.
	  Added parameter checking meta type matrix.
	  Added ZRealType to expression, assignment and
	  parameter type checking matrices.
	* gm2/gm2-compiler/M2GCCDeclare.mod:  tell GCC about
	  the front end ZRealType type.
	* gm2/gm2-compiler/M2Quads.mod:  improved type incompatible
	  error message.
	* gm2-compiler/SymbolTable.mod:  floating point literals
	  use the ZRealType.
	* gm2/gm2-libs/FpuIO.mod:  explicitly cast REAL to LONGREAL.
	* gm2/gm2-libs/StringConvert.mod:  explicitly cast CARDINAL
	  to LONGCARD.
	* gm2/gm2-libs-pim/RealInOut.mod:  explicitly cast LONGREAL
	  to REAL and visa versa.
	* gm2/ulm-lib-gm2/std/Directories.mod:  cast blocksize
	  (LONGCARD) to CARDINAL.

2008-01-24       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-pim/InOut.mod:  fixed bug reported by
	  Steve Giess, data written by InOut and FpuIO did not
	  appear in order.  Modified InOut.mod so that all reads
	  and writes go through FIO.mod.

2008-01-21       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2ALU.def:  renamed parameters to
	  procedure AddElements.
	* gm2/gm2-compiler/M2ALU.mod:  AddElements uses AddElementToEnd
	  which fixes a bug in array element ordering during compound
	  constant literal construction.

2008-01-17       Gaius Mulley <gaius@gnu.org>

	* ISO conformant compound literal constructors have been
	  implemented.
	* gm2/TODO:  updated.